openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: deid-roberta
spec:
  path: ''
  to:
    name: deid-roberta-sidecar
    weight: 100
    kind: Service
  host: ''
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  port:
    targetPort: https
  alternateBackends: []
